--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "com.xwray:groupie:2.8.0"
+    implementation 'com.google.android:flexbox:2.0.1'
+    implementation 'com.vanniktech:emoji-google:0.6.0'
 
 //    implementation 'com.squareup.retrofit2:retrofit:2.7.1'
 //    implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
